# BBBoysStartup-ArkHelp

./: .env.example  .gitignore  README.md  SEO_REFERENCE.md  SEO_REPORT.md  manage.py  pyproject.toml  requirements.txt  session-ses_168d.md  sw.js
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_house_address_userprofile_landmark_and_more.py  0003_siteconfiguration_helperprofile_nid_card_image_and_more.py
ads/: admin.py  apps.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/templatetags/: __init__.py  ad_tags.py
helpers/: admin.py  choices.py  urls.py  views.py
helphands/: asgi.py  context_processors.py  robots.txt  settings.py  sitemap.py  urls.py  wsgi.py
hirings/: admin.py  apps.py  models.py  urls.py  views.py
hirings/migrations/: 0001_initial.py
media/profiles/: images.jfif
static/: llms.txt
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/accounts/: edit_helper_profile.html  edit_profile.html  helper_dashboard.html  login.html  signup.html  user_dashboard.html
templates/ads/: ad_display.html
templates/emails/: verification.html
templates/helpers/: helper_detail.html  helper_list.html  home.html
templates/hirings/: create_hiring.html  my_hirings.html  submit_review.html
templates/pages/: about.html  privacy.html  terms.html
